# octomap_to_gazebo_world

./: CMakeLists.txt  README.md  package.xml  run.sh
gazebo_worlds/: office3.world
install_scripts/: install_dependencies.bash
launch/: generate_world_and_contours.launch  launch_gazebo_world.launch
maps/: example_map.pgm  example_map.yaml  example_map_inverted_and_rescaled.pgm  example_map_inverted_and_rescaled.yaml  map.pgm  map_cleanedup.pgm  map_cleanedup.yaml  office3.pgm  office3.yaml
python_scripts/: createGazeboWorld.py  generate_world_and_contours.py  visvalingamWhyatt.py
python_scripts/.ropeproject/: globalnames
