<?xml version="1.0"?>
<package>
    <name>octomap_to_gazebo</name>
    <version>0.1.0</version>
    <description>Converts an occupancy grid to a simple gazebo world file</description>
    <maintainer email="stan.j.brown@gmail.com">Stan Brown</maintainer>
    <author>Stan Brown</author>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>
 
    <build_depend>using_markers</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>actionlib</build_depend>

    <run_depend>using_markers</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>actionlib</run_depend>

</package>
